# sitecopy

./: .release.sh  .update-po.sh  BUGS  ChangeLog  ChangeLog.CVS  Makefile  Makefile.in  NEWS  README  README.emx  README.gnome  THANKS  TODO  aclocal.m4  autogen.sh  compilar.sh  compilar.sh~  config.h  config.h.emx.in  config.h.in  config.status  configure  configure.in  packagegen.sh  packagegen.sh~  sitecopy  sitecopy.lsm.in  sitecopy.spec  sitecopy.spec.in
doc/: changes.awk  examplerc  sitecopy.1  sitecopy.fr.1  update.sh  xsitecopy.1
gnome/: ChangeLog.xsitecopy  changes.c  changes.h  dir.xpm  dir2.xpm  dir2_changed.xpm  dir2_del.xpm  dir2_new.xpm  dir_changed.xpm  dir_del.xpm  dir_new.xpm  file.xpm  file_changed.xpm  file_del.xpm  file_moved.xpm  file_new.xpm  file_widgets.c  file_widgets.h  gcommon.c  gcommon.h  init.c  init.h  link.xpm  link_changed.xpm  link_del.xpm  link_new.xpm  main.c  minilist.c  minilist.h  misc.c  misc.h  new_site.c  new_site.h  operations.c  operations.h  resynch.c  resynch.h  site_widgets.c  site_widgets.h  tree.c  (+1 more)
gnome/doc/: book1.html  c12.html  c130.html  c138.html  c222.html  c227.html  c243.html  c28.html  c35.html  c39.html  c44.html  c9.html  x117.html  x135.html  x160.html  x183.html  x195.html  x200.html  x214.html  x70.html  x91.html  xsitecopy.sgml
gnome/share/: sitecopy-dialogs.glade  xsitecopy.desktop
intl/: Makefile
lib/: dirname.c  getopt.c  getopt1.c  linelen.c  netrc.c  yesno.c
lib/curl-7.15.3/: Makefile  Makefile.am  Makefile.in  configure  configure.ac
lib/curl-7.15.3/include/: Makefile.in
lib/curl-7.15.3/include/curl/: curl.h  curlver.h
lib/curl-7.15.3/lib/: Makefile.in  config.h.in  curllib.dsp  libcurl.plist  url.c  urldata.h
lib/curl-7.15.3/tests/: Makefile.in  runtests.pl
lib/curl-7.15.3/tests/data/: Makefile.in
lib/curl-7.15.3/tests/libtest/: Makefile.am  Makefile.in
lib/curl-7.15.3/tests/server/: Makefile.in
lib/libcurl/: Makefile.in  hugehelp.c  main.c  version.h
lib/neon/: Makefile
po/: Makefile  Makefile.in  Makevars  POTFILES  POTFILES.in  cs.gmo  cs.po  de.gmo  de.po  es.po  fr.gmo  fr.po  it.gmo  it.po  ja.gmo  ja.po  nn.gmo  nn.po  ru.gmo  ru.po  sitecopy.pot  tr.gmo  tr.po
src/: a.out  common.c  common.h  console_fe.c  curlftpget.c  curlftpupload.c  davdriver.c  frontend.h  ftp.c  ftp.h  ftpcurldriver.c  ftpdriver.c  ftptest.c  i18n.h  inotify.c  lsparser.c  lsparser.h  nulldriver.c  protocol.h  proxy.c  rcfile.c  rcfile.c~  rcfile.h  rshdriver.c  sftpdriver.c  sitefiles.c  sites.c  sites.h  sitesi.h  sitestore.c  vfsdriver.c
tests/: server.test
